--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -7,9 +7,4 @@ version = "0.1.0"
 async-trait = "0.1"
 bus = {version = "2", optional = true}
 clap = "4.0.17"
-maybe-async-cfg = "0.2"
-tokio = {version = "1", features = ["sync"], optional = true}
-
-[features]
-async-tokio = ["tokio"]
-blocking = ["bus"]
+tokio = {version = "1", features = ["sync"]}
