--- a/daemon-slayer-plugins/file-watcher/Cargo.toml
+++ b/daemon-slayer-plugins/file-watcher/Cargo.toml
@@ -10,9 +10,5 @@ daemon-slayer-core = {path = "../../daemon-slayer-core"}
 futures = {version = "0.3", optional = true}
 notify = {version = "5", default-features = false, features = ["fsevent-sys", "macos_fsevent"]}
 notify-debouncer-mini = {version = "0.2", default-features = false}
-tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"], optional = true}
+tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"]}
 tracing = "0.1"
-
-[features]
-async-tokio = ["tokio", "futures"]
-blocking = ["bus"]
