--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -7,9 +7,9 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.57"
 axum = "0.5.16"
-daemon-slayer = {path = "../../daemon-slayer", features = ["all-async", "all-sync"]}
+daemon-slayer = {path = "../../daemon-slayer", features = ["all-async", "plugin-file-watcher"]}
 futures = "0.3.24"
-reqwest = { version = "0.11.11", features = ["blocking"] }
+reqwest = {version = "0.11.11", features = ["blocking"]}
 serde = "1.0.144"
 serde_derive = "1.0.144"
 tempfile = "3.3.0"
