--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.57"
 axum = "0.5.16"
-daemon-slayer = {path = "../../daemon-slayer", features = ["all-async", "plugin-file-watcher"]}
+daemon-slayer = {path = "..", features = ["server-base", "client-base", "ipc-health-check", "all-plugins"]}
 futures = "0.3.24"
 reqwest = {version = "0.11.11", features = ["blocking"]}
 serde = "1.0.144"
