--- a/daemon-slayer-plugins/task-queue/Cargo.toml
+++ b/daemon-slayer-plugins/task-queue/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 aide-de-camp = {git = "https://github.com/aschey/aide-de-camp", rev = "c602bdefda4d7b1f776e8523bea465c1fdf2fd44"}
 aide-de-camp-sqlite = {git = "https://github.com/aschey/aide-de-camp", rev = "c602bdefda4d7b1f776e8523bea465c1fdf2fd44", default-features = false, features = ["rustls"]}
 async-trait = "0.1.57"
-daemon-slayer-core = {path = "../../daemon-slayer-core"}
+daemon-slayer-core = {path = "../../daemon-slayer-core", features = ["server"]}
 log = "0.4"
 tokio = {version = "1", features = ["sync"]}
 tracing = "0.1"
