--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
-daemon-slayer-core = {path = "../daemon-slayer-core"}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
 eyre = "0.6"
 strum = "0.24"
 strum_macros = "0.24"
@@ -24,3 +24,6 @@ directories = "4"
 launchd = {git = "https://github.com/aschey/launchd", rev = "c4d6ae24de02cfc04097b1de3b33434eeb4a5d5e"}
 once_cell = "1.14"
 regex = "1.6"
+
+[features]
+cli = ["daemon-slayer-core"]
