--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -5,6 +5,10 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
-bus = {version = "2", optional = true}
-clap = "4.0.17"
+clap = {version = "4", optional = true}
 tokio = {version = "1", features = ["sync"]}
+
+[features]
+cli = ["clap"]
+health-check = []
+server = []
