--- a/daemon-slayer-health-check/Cargo.toml
+++ b/daemon-slayer-health-check/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = {version = "0.1"}
-daemon-slayer-core = {path = "../daemon-slayer-core"}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["health-check"]}
 parity-tokio-ipc = {version = "0.9", optional = true}
 reqwest = {version = "0.11", optional = true}
 tokio = {version = "1", features = ["net"]}
@@ -13,6 +13,7 @@ tonic = {version = "0.8", optional = true}
 tonic-health = {version = "0.7", optional = true}
 
 [features]
+cli = ["daemon-slayer-core/cli"]
 grpc-health-check = ["tonic", "tonic-health"]
 http-health-check = ["reqwest"]
 ipc-health-check = ["parity-tokio-ipc"]
