--- a/daemon-slayer-plugins/ipc-health-check/Cargo.toml
+++ b/daemon-slayer-plugins/ipc-health-check/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
-daemon-slayer-core = {path = "../../daemon-slayer-core"}
+daemon-slayer-core = {path = "../../daemon-slayer-core", features = ["server"]}
 futures = "0.3"
 parity-tokio-ipc = {version = "0.9"}
 tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"]}
