--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = {version = "0.1"}
-daemon-slayer-core = {path = "../daemon-slayer-core"}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"]}
 daemon-slayer-macros = {path = "../daemon-slayer-macros"}
 futures = {version = "0.3"}
 once_cell = "1"
@@ -30,3 +30,6 @@ sd-notify = "0.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 launchd = "0.2"
+
+[features]
+cli = ["daemon-slayer-core/cli"]
