add gui scaffolding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
   "daemon-slayer-tray",
   "daemon-slayer-health-check",
   "daemon-slayer-error-handler",
+  "daemon-slayer-gui/src-tauri",
   "daemon-slayer-plugins/signals",
   "daemon-slayer-plugins/task-queue",
   "daemon-slayer-plugins/file-watcher",
