--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,17 @@ Cargo.lock
 *.profraw
 
 *.db
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+.next
