--- a/daemon-slayer-gui/src-tauri/Cargo.toml
+++ b/daemon-slayer-gui/src-tauri/Cargo.toml
@@ -1,27 +1,28 @@
 [package]
-name = "daemon-slayer-gui"
-version = "0.0.0"
-description = "A Tauri App"
 authors = ["you"]
-license = ""
-repository = ""
+description = "A Tauri App"
 edition = "2021"
+license = ""
+name = "daemon-slayer-gui"
+repository = ""
 rust-version = "1.57"
+version = "0.0.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.1", features = [] }
+tauri-build = {version = "1.1", features = [] }
 
 [dependencies]
+serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1", features = ["api-all"] }
+tauri = {version = "1.1", features = ["api-all", "system-tray"] }
+tauri-plugin-positioner = {git = "https://github.com/aschey/tauri-plugin-positioner", features = ["system-tray"] }
 
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
