--- a/daemon-slayer-gui/package.json
+++ b/daemon-slayer-gui/package.json
@@ -8,6 +8,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.6.0",
+    "@mantine/hooks": "^5.6.0",
+    "@mantine/next": "^5.6.0",
+    "@mantine/notifications": "^5.6.0",
     "@tauri-apps/api": "^1.1.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
