--- a/daemon-slayer-gui/src-tauri/Cargo.toml
+++ b/daemon-slayer-gui/src-tauri/Cargo.toml
@@ -14,6 +14,7 @@ version = "0.0.0"
 tauri-build = {version = "1.1", features = [] }
 
 [dependencies]
+daemon-slayer-client = {path = "../../daemon-slayer-client"}
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = {version = "1.1", features = ["api-all", "system-tray"] }
