--- a/daemon-slayer-gui/src-tauri/Cargo.toml
+++ b/daemon-slayer-gui/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = {version = "1.1", features = ["api-all", "system-tray"] }
 tauri-plugin-positioner = {git = "https://github.com/aschey/tauri-plugin-positioner", features = ["system-tray"] }
+tokio = { version = "1.21.2", features = ["time"] }
 
 [features]
 # by default Tauri runs in production mode
