--- a/daemon-slayer-gui/package.json
+++ b/daemon-slayer-gui/package.json
@@ -8,22 +8,22 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.6.0",
-    "@mantine/hooks": "^5.6.0",
-    "@mantine/next": "^5.6.0",
-    "@mantine/notifications": "^5.6.0",
-    "@tauri-apps/api": "^1.1.0",
-    "next": "^12.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@emotion/react": "11.10.4",
+    "@emotion/server": "11.10.0",
+    "@mantine/core": "5.6.2",
+    "@mantine/hooks": "5.6.2",
+    "@mantine/next": "5.6.2",
+    "@mantine/notifications": "5.6.2",
+    "@tauri-apps/api": "1.1.0",
+    "next": "13.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.1.0",
-    "@types/node": "^18.7.11",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4"
+    "@tauri-apps/cli": "1.1.1",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.23",
+    "@types/react-dom": "18.0.7",
+    "typescript": "4.8.4"
   }
 }
