--- a/daemon-slayer-gui/package.json
+++ b/daemon-slayer-gui/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/server": "11.10.0",
+    "@emotion/styled": "^11.10.5",
     "@mantine/core": "5.6.2",
     "@mantine/hooks": "5.6.2",
     "@mantine/next": "5.6.2",
     "@mantine/notifications": "5.6.2",
     "@tauri-apps/api": "1.1.0",
+    "ansicolor": "^1.1.100",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
