--- a/daemon-slayer-gui/src-tauri/Cargo.toml
+++ b/daemon-slayer-gui/src-tauri/Cargo.toml
@@ -11,15 +11,16 @@ version = "0.0.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = {version = "1.1", features = []}
+tauri-build = {version = "1.1", features = [] }
 
 [dependencies]
 daemon-slayer-client = {path = "../../daemon-slayer-client"}
-serde = {version = "1.0", features = ["derive"]}
+serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri = {version = "1.1", features = ["api-all", "system-tray"]}
-tauri-plugin-positioner = {git = "https://github.com/aschey/tauri-plugin-positioner", features = ["system-tray"]}
-tokio = {version = "1.21.2", features = ["time"]}
+tauri = {version = "1.1", features = ["api-all", "system-tray"] }
+tauri-plugin-positioner = {git = "https://github.com/aschey/tauri-plugin-positioner", features = ["system-tray"] }
+tokio = {version = "1.21.2", features = ["time"] }
+tracing-ipc = {git = "https://github.com/aschey/tracing-ipc", rev = "936431c1ec358d8cf9099708599c65edf8753782"}
 
 [features]
 # by default Tauri runs in production mode
