--- a/daemon-slayer-gui/package.json
+++ b/daemon-slayer-gui/package.json
@@ -16,6 +16,7 @@
     "@mantine/next": "5.6.2",
     "@mantine/notifications": "5.6.2",
     "@tanstack/react-table": "^8.5.21",
+    "@tanstack/react-virtual": "3.0.0-beta.18",
     "@tauri-apps/api": "1.1.0",
     "ansicolor": "^1.1.100",
     "next": "13.0.0",
