--- a/daemon-slayer-plugins/task-queue/Cargo.toml
+++ b/daemon-slayer-plugins/task-queue/Cargo.toml
@@ -12,4 +12,5 @@ async-trait = "0.1.57"
 daemon-slayer-core = {path = "../../daemon-slayer-core", features = ["server"]}
 log = "0.4"
 tokio = {version = "1", features = ["sync"]}
+tokio-stream = {version = "0.1", features = ["sync"]}
 tracing = "0.1"
