--- a/daemon-slayer-gui2/package.json
+++ b/daemon-slayer-gui2/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@solid-primitives/scheduled": "^1.2.0",
     "@tanstack/solid-virtual": "3.0.0-beta.18",
     "@tauri-apps/api": "^1.1.0",
     "ansicolor": "^1.1.100",
