--- a/daemon-slayer-gui/package.json
+++ b/daemon-slayer-gui/package.json
@@ -1,32 +1,29 @@
 {
   "name": "daemon-slayer-gui",
-  "private": true,
   "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "dev": "next dev -p 1420",
-    "build": "next build && next export -o dist",
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "tauri": "tauri"
   },
-  "dependencies": {
-    "@emotion/react": "11.10.4",
-    "@emotion/server": "11.10.0",
-    "@emotion/styled": "^11.10.5",
-    "@mantine/core": "5.6.2",
-    "@mantine/hooks": "5.6.2",
-    "@mantine/next": "5.6.2",
-    "@mantine/notifications": "5.6.2",
-    "react-virtual": "2.10.4",
-    "@tauri-apps/api": "1.1.0",
-    "ansicolor": "^1.1.100",
-    "next": "13.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "@tauri-apps/cli": "1.1.1",
-    "@types/node": "18.11.7",
-    "@types/react": "18.0.23",
-    "@types/react-dom": "18.0.7",
-    "typescript": "4.8.4"
+    "@tauri-apps/cli": "^1.1.0",
+    "@types/node": "^18.7.10",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.0",
+    "vite-plugin-solid": "^2.3.0"
+  },
+  "dependencies": {
+    "@solid-primitives/scheduled": "^1.2.0",
+    "@tanstack/solid-virtual": "3.0.0-beta.18",
+    "@tauri-apps/api": "^1.1.0",
+    "ansicolor": "^1.1.100",
+    "solid-js": "^1.4.7",
+    "solid-styled-components": "^0.28.5",
+    "solid-toast": "^0.3.5"
   }
 }
