--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -6,15 +6,16 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1"
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
+enumflags2 = "0.7.5"
 eyre = "0.6"
 strum = "0.24"
 strum_macros = "0.24"
-utfx = "0.1"
 
 [target.'cfg(windows)'.dependencies]
 regex = "1"
 registry = "1.2"
-windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
+utfx = "0.1"
+windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "32919aebe4c59f7855a8ebd72fe7d716db6a8f28"}
 
 [target.'cfg(target_os="linux")'.dependencies]
 systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "5d1c70d051a878933dc8d149393e768ca84fe0d8"}
