--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -8,6 +8,7 @@ async-trait = "0.1"
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
 enumflags2 = "0.7.5"
 eyre = "0.6"
+serde = {version = "1.0", features = ["derive"]}
 strum = "0.24"
 strum_macros = "0.24"
 
