--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -7,10 +7,12 @@ version = "0.1.0"
 async-trait = "0.1"
 clap = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
+strum = {version = "0.24", optional = true}
+strum_macros = {version = "0.24", optional = true}
 tokio = {version = "1", features = ["sync"]}
 tokio-stream = {version = "0.1", features = ["sync"], optional = true}
 
 [features]
-cli = ["clap"]
+cli = ["clap", "strum", "strum_macros"]
 health-check = []
 server = ["tokio-stream", "futures"]
