--- a/daemon-slayer-error-handler/Cargo.toml
+++ b/daemon-slayer-error-handler/Cargo.toml
@@ -3,6 +3,11 @@ edition = "2021"
 name = "daemon-slayer-error-handler"
 version = "0.1.0"
 
+[features]
+cli = ["daemon-slayer-core"]
+
 [dependencies]
+async-trait = {version = "0.1"}
 color-eyre = "0.6"
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
 tracing = "0.1"
