--- a/daemon-slayer-logging/Cargo.toml
+++ b/daemon-slayer-logging/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [features]
 base = ["ipc", "linux-journald", "mac-oslog", "windows-eventlog"]
+cli = ["daemon-slayer-core"]
 file = ["directories"]
 ipc = ["tracing-ipc"]
 linux-journald = ["tracing-journald"]
@@ -12,7 +13,8 @@ mac-oslog = ["tracing-oslog"]
 windows-eventlog = ["tracing-eventlog"]
 
 [dependencies]
-async-trait = {version = "0.1", optional = true}
+async-trait = {version = "0.1"}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
 directories = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = "1"
