--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -10,9 +10,10 @@ futures = {version = "0.3", optional = true}
 strum = {version = "0.24", optional = true}
 strum_macros = {version = "0.24", optional = true}
 tokio = {version = "1", features = ["sync"]}
+tokio-graceful-shutdown = {version = "0.11", optional = true}
 tokio-stream = {version = "0.1", features = ["sync"], optional = true}
 
 [features]
 cli = ["clap", "strum", "strum_macros"]
 health-check = []
-server = ["tokio-stream", "futures"]
+server = ["tokio-stream", "futures", "tokio-graceful-shutdown"]
