--- a/daemon-slayer-ipc/Cargo.toml
+++ b/daemon-slayer-ipc/Cargo.toml
@@ -11,6 +11,7 @@ name = "mybin"
 [dependencies]
 futures = "0.3.25"
 parity-tokio-ipc = "0.9.0"
+rand = "0.8.5"
 serde = "1.0.147"
 tarpc = {version = "0.31.0", features = ["tokio1", "serde-transport", "serde-transport-json", "serde-transport-bincode"]}
 tokio = {version = "1.21.2", features = ["rt-multi-thread", "net", "macros"]}
