--- a/daemon-slayer-ipc/Cargo.toml
+++ b/daemon-slayer-ipc/Cargo.toml
@@ -9,6 +9,8 @@ name = "mybin"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.58"
+bytes = { version = "1.2.1", features = ["serde"] }
 futures = "0.3.25"
 parity-tokio-ipc = "0.9.0"
 rand = "0.8.5"
