--- a/daemon-slayer-ipc/Cargo.toml
+++ b/daemon-slayer-ipc/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.58"
 bytes = {version = "1.2.1", features = ["serde"]}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"]}
 futures = "0.3.25"
 parity-tokio-ipc = "0.9.0"
 rand = "0.8.5"
