--- a/daemon-slayer-client/Cargo.toml
+++ b/daemon-slayer-client/Cargo.toml
@@ -5,7 +5,8 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
+confique = {version = ">= 0.2.2", optional = true}
+daemon-slayer-core = {path = "../daemon-slayer-core"}
 enumflags2 = "0.7.5"
 eyre = "0.6"
 serde = {version = "1.0", features = ["derive"]}
@@ -26,4 +27,5 @@ once_cell = "1"
 regex = "1.6"
 
 [features]
-cli = ["daemon-slayer-core"]
+cli = ["daemon-slayer-core/cli"]
+config = ["confique", "daemon-slayer-core/config"]
