--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -4,6 +4,7 @@ name = "daemon-slayer-core"
 version = "0.1.0"
 
 [dependencies]
+arc-swap = {version = "1.5.1"}
 async-trait = "0.1"
 clap = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
