--- a/daemon-slayer-plugins/signals/Cargo.toml
+++ b/daemon-slayer-plugins/signals/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1"
-daemon-slayer-core = {path = "../../daemon-slayer-core", features = ["server"]}
+daemon-slayer-core = {path = "../../daemon-slayer-core", features = ["server", "signal"]}
 futures = {version = "0.3"}
 
 [target.'cfg(unix)'.dependencies]
@@ -14,6 +14,5 @@ signal-hook-tokio = {version = "0.3", features = ["futures-v0_3"]}
 tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"]}
 
 [target.'cfg(windows)'.dependencies]
-once_cell = "1"
 signal-hook = {version = "0.3"}
 tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal"]}
