--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = {version = "0.1"}
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"]}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server", "signal"]}
 daemon-slayer-macros = {path = "../daemon-slayer-macros"}
 futures = {version = "0.3"}
 once_cell = "1"
@@ -14,7 +14,6 @@ tracing = "0.1"
 
 [target.'cfg(windows)'.dependencies]
 bus = {version = "2", optional = true}
-daemon-slayer-plugin-signals = {path = "../daemon-slayer-plugins/signals"}
 registry = "1"
 signal-hook = {version = "0.3", optional = true}
 tokio = {version = "1", features = ["rt-multi-thread", "signal", "net", "macros", "sync"]}
