move service context to core

--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -11,9 +11,11 @@ futures = {version = "0.3", optional = true}
 once_cell = {version = "1", optional = true}
 strum = {version = "0.24", optional = true}
 strum_macros = {version = "0.24", optional = true}
+tap = "1"
 tokio = {version = "1", features = ["sync"]}
 tokio-graceful-shutdown = {version = "0.11", optional = true}
 tokio-stream = {version = "0.1", features = ["sync"], optional = true}
+tracing = "0.1"
 
 [features]
 cli = ["clap", "strum", "strum_macros"]
