--- a/daemon-slayer-console/Cargo.toml
+++ b/daemon-slayer-console/Cargo.toml
@@ -8,7 +8,7 @@ async-trait = {version = "0.1"}
 confique = ">= 0.2.2"
 crossterm = {version = "0.25", features = ["event-stream"]}
 daemon-slayer-client = {path = "../daemon-slayer-client"}
-daemon-slayer-core = {path = "../daemon-slayer-core", optional = true}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"], optional = true}
 futures = {version = "0.3"}
 serde = "1"
 tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
