--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -6,8 +6,8 @@ version = "0.1.0"
 
 [dependencies]
 async-trait = "0.1.58"
-axum = "0.5.17"
-daemon-slayer = {path = "..", features = ["server-base", "client-base", "ipc-health-check", "all-plugins"]}
+axum = "0.6.1"
+daemon-slayer = {path = "..", features = ["server-base", "client-base", "ipc-health-check", "all-plugins", "config"]}
 futures = "0.3.25"
 reqwest = {version = "0.11.12", features = ["blocking"]}
 serde = "1.0.147"
