--- a/daemon-slayer-core/Cargo.toml
+++ b/daemon-slayer-core/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 arc-swap = {version = "1.5", optional = true}
 async-trait = "0.1"
 clap = {version = "4", optional = true}
+daemon-slayer-macros = {path = "../daemon-slayer-macros", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = {version = "1", optional = true}
 strum = {version = "0.24", optional = true}
@@ -19,7 +20,7 @@ tracing = "0.1"
 
 [features]
 cli = ["clap", "strum", "strum_macros"]
-config = ["arc-swap"]
+config = ["arc-swap", "daemon-slayer-macros", "daemon-slayer-macros/config"]
 health-check = []
 server = ["tokio-stream", "futures", "tokio-graceful-shutdown"]
 signal = ["once_cell"]
