--- a/daemon-slayer-logging/Cargo.toml
+++ b/daemon-slayer-logging/Cargo.toml
@@ -6,18 +6,22 @@ version = "0.1.0"
 [features]
 base = ["ipc", "linux-journald", "mac-oslog", "windows-eventlog"]
 cli = ["daemon-slayer-core"]
+config = ["confique", "serde"]
 file = ["directories"]
 ipc = ["tracing-ipc"]
 linux-journald = ["tracing-journald"]
 mac-oslog = ["tracing-oslog"]
+server = []
 windows-eventlog = ["tracing-eventlog"]
 
 [dependencies]
 async-trait = {version = "0.1"}
+confique = {version = ">= 0.2.2", optional = true}
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
 directories = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = "1"
+serde = {version = "1", optional = true}
 time = "0.3"
 tracing = "0.1"
 tracing-appender = {version = "0.2"}
