--- a/daemon-slayer-plugins/signals/Cargo.toml
+++ b/daemon-slayer-plugins/signals/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 async-trait = "0.1"
 daemon-slayer-core = {path = "../../daemon-slayer-core", features = ["server", "signal"]}
 futures = {version = "0.3"}
+tracing = "0.1"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
