--- a/daemon-slayer-server/Cargo.toml
+++ b/daemon-slayer-server/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [dependencies]
 async-trait = {version = "0.1"}
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server", "signal"]}
-daemon-slayer-macros = {path = "../daemon-slayer-macros"}
+daemon-slayer-macros = {path = "../daemon-slayer-macros", features = ["server"]}
 futures = {version = "0.3"}
 once_cell = "1"
 tap = "1"
