--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -8,6 +8,7 @@ arc-swap = {version = "1.5.1"}
 async-trait = "0.1"
 confique = {version = ">= 0.2.2", optional = true}
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["config"]}
+dyn-clonable = "0.9.0"
 enumflags2 = "0.7.5"
 eyre = "0.6"
 serde = {version = "1"}
