switch to cancellation token

--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -10,18 +10,19 @@ clap = {version = "4", optional = true}
 daemon-slayer-macros = {path = "../daemon-slayer-macros", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = {version = "1", optional = true}
+pin-project-lite = "0.2.9"
 strum = {version = "0.24", optional = true}
 strum_macros = {version = "0.24", optional = true}
 tap = "1"
 thiserror = "1"
 tokio = {version = "1", features = ["sync"]}
-tokio-graceful-shutdown = {version = "0.11", optional = true}
 tokio-stream = {version = "0.1", features = ["sync"], optional = true}
+tokio-util = {version = "0.7", optional = true}
 tracing = "0.1"
 
 [features]
 cli = ["clap", "strum", "strum_macros"]
 config = ["arc-swap", "daemon-slayer-macros", "daemon-slayer-macros/config"]
 health-check = []
-server = ["tokio-stream", "futures", "tokio-graceful-shutdown"]
+server = ["tokio-stream", "futures", "tokio-util"]
 signal = ["once_cell"]
