--- a/crates/daemon-slayer-error-handler/Cargo.toml
+++ b/crates/daemon-slayer-error-handler/Cargo.toml
@@ -10,4 +10,5 @@ cli = ["daemon-slayer-core"]
 async-trait = {version = "0.1"}
 color-eyre = "0.6"
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
+once_cell = "1"
 tracing = "0.1"
