make bat optional

--- a/crates/daemon-slayer-config/Cargo.toml
+++ b/crates/daemon-slayer-config/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [dependencies]
 arc-swap = {version = "1"}
 async-trait = "0.1"
-bat = {version = "0.22", default-features = false, features = ["regex-onig", "paging"]}
+bat = {version = "0.22", default-features = false, features = ["regex-onig", "paging"], optional = true}
 confique = ">= 0.2.2"
 daemon-slayer-client = {path = "../daemon-slayer-client"}
 daemon-slayer-core = {path = "../daemon-slayer-core"}
@@ -20,4 +20,5 @@ tracing = "0.1"
 
 [features]
 cli = ["daemon-slayer-core/cli"]
+pretty-print = ["bat"]
 server = ["daemon-slayer-core/server"]
