--- a/crates/daemon-slayer-config/Cargo.toml
+++ b/crates/daemon-slayer-config/Cargo.toml
@@ -14,6 +14,7 @@ daemon-slayer-file-watcher = {path = "../daemon-slayer-file-watcher"}
 directories = "4"
 edit = "0.1"
 futures = "0.3"
+tap = "1"
 thiserror = "1"
 tokio = "1"
 tracing = "0.1"
