--- a/crates/daemon-slayer-error-handler/Cargo.toml
+++ b/crates/daemon-slayer-error-handler/Cargo.toml
@@ -11,4 +11,6 @@ async-trait = {version = "0.1"}
 color-eyre = "0.6"
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
 once_cell = "1"
+tap = "1"
+thiserror = "1"
 tracing = "0.1"
