--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -22,6 +22,8 @@ directories = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = "1"
 serde = {version = "1", optional = true}
+tap = "1"
+thiserror = "1"
 time = "0.3"
 tracing = "0.1"
 tracing-appender = {version = "0.2"}
