--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,21 +1,5 @@
-[package]
-edition = "2021"
-name = "examples"
-publish = false
-version = "0.1.0"
 
 [workspace]
-
-[dependencies]
-arc-swap = {version = "1.5.1"}
-assert_cmd = "2.0.6"
-async-trait = {version = "0.1.58"}
-axum = "0.5.17"
-confique = "0.2.2"
-daemon-slayer = {path = "../crates/daemon-slayer", features = ["server-base", "client-base", "config", "config-pretty-print", "ipc", "http-health-check", "ipc-health-check", "extras"]}
-futures = {version = "0.3.25"}
-serde = {version = "1.0.147"}
-tokio = {version = "1.21.2", features = ["rt-multi-thread", "time", "macros"]}
-tonic = "0.8.2"
-tower-http = {version = "0.3.4", features = ["trace"]}
-tracing = "0.1.37"
+exclude = ["old", "target", "assets"]
+members = ["*"]
+resolver = "2"
