--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -11,7 +11,10 @@ daemon-slayer-core = {path = "../daemon-slayer-core", features = ["config"]}
 dyn-clonable = "0.9.0"
 enumflags2 = "0.7.5"
 eyre = "0.6"
+owo-colors = {version = "3.5.0", features = ["supports-colors"]}
 serde = {version = "1"}
+strum = "0.24"
+strum_macros = "0.24"
 
 [target.'cfg(windows)'.dependencies]
 regex = "1"
