--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [features]
 base = ["ipc", "linux-journald", "mac-oslog", "windows-eventlog"]
-cli = ["daemon-slayer-core"]
+cli = ["daemon-slayer-core/cli"]
 config = ["confique", "serde"]
 file = ["directories"]
 ipc = ["tracing-ipc"]
@@ -17,7 +17,7 @@ windows-eventlog = ["tracing-eventlog"]
 [dependencies]
 async-trait = {version = "0.1"}
 confique = {version = ">= 0.2.2", optional = true}
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
+daemon-slayer-core = {path = "../daemon-slayer-core"}
 directories = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = "1"
