--- a/crates/daemon-slayer-console/Cargo.toml
+++ b/crates/daemon-slayer-console/Cargo.toml
@@ -8,7 +8,7 @@ async-trait = {version = "0.1"}
 confique = {version = ">= 0.2.2", optional = true}
 crossterm = {version = "0.25", features = ["event-stream"]}
 daemon-slayer-client = {path = "../daemon-slayer-client"}
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server", "config"], optional = true}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server", "config", "health-check"], optional = true}
 futures = {version = "0.3"}
 serde = {version = "1", optional = true}
 tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
