--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -15,6 +15,7 @@ owo-colors = {version = "3.5.0", features = ["supports-colors"]}
 serde = {version = "1"}
 strum = "0.24"
 strum_macros = "0.24"
+thiserror = "1"
 
 [target.'cfg(windows)'.dependencies]
 regex = "1"
