decouple client and config modules

--- a/crates/daemon-slayer-config/Cargo.toml
+++ b/crates/daemon-slayer-config/Cargo.toml
@@ -8,8 +8,7 @@ arc-swap = {version = "1"}
 async-trait = "0.1"
 bat = {version = "0.22", default-features = false, features = ["regex-onig", "paging"], optional = true}
 confique = ">= 0.2.2"
-daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
-daemon-slayer-core = {path = "../daemon-slayer-core"}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["config"]}
 daemon-slayer-file-watcher = {path = "../daemon-slayer-file-watcher"}
 directories = "4"
 edit = "0.1"
@@ -21,6 +20,5 @@ tracing = "0.1"
 
 [features]
 cli = ["daemon-slayer-core/cli"]
-client = ["daemon-slayer-client"]
 pretty-print = ["bat"]
 server = ["daemon-slayer-core/server"]
