--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -8,6 +8,7 @@ arc-swap = {version = "1.5", optional = true}
 async-trait = "0.1"
 clap = {version = "4", optional = true}
 daemon-slayer-macros = {path = "../daemon-slayer-macros", optional = true}
+dyn-clonable = {version = "0.9", optional = true}
 futures = {version = "0.3", optional = true}
 once_cell = {version = "1", optional = true}
 pin-project-lite = "0.2.9"
@@ -22,7 +23,7 @@ tracing = "0.1"
 
 [features]
 cli = ["clap", "strum", "strum_macros"]
-config = ["arc-swap", "daemon-slayer-macros", "daemon-slayer-macros/config"]
+config = ["arc-swap", "dyn-clonable", "daemon-slayer-macros", "daemon-slayer-macros/config"]
 health-check = []
 server = ["tokio-stream", "futures", "tokio-util"]
 signal = ["once_cell"]
