--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,13 +9,12 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: macos-latest
-            cargo-admin: sudo -E /Users/runner/.cargo/bin/cargo
+            sudo: sudo
             protoc-target: osx-x86_64
           - os: ubuntu-latest
-            cargo-admin: sudo -E /home/runner/.cargo/bin/cargo
+            sudo:  sudo env PATH="$PATH"
             protoc-target: linux-x86_64
           - os: windows-latest
-            cargo-admin: cargo
             protoc-target: win64
       fail-fast: false
     name: Build and test
@@ -39,5 +38,5 @@ jobs:
           unzip protoc-3.19.4-${{ matrix.protoc-target }}.zip -d "${{ github.workspace }}/protoc"
           cargo install cargo-make
           cargo make build-all
-          ${{ matrix.cargo-admin }} test --workspace -- --nocapture
-          cargo test --workspace -- --nocapture
+          ${{ matrix.sudo }} cargo make test-admin
+          cargo make test
