--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -7,14 +7,12 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.58"
 axum = "0.6.1"
+confique = "0.2.2"
 daemon-slayer = {path = "../crates/daemon-slayer", features = ["server-standard", "client-standard", "extras"]}
 futures = "0.3.25"
 reqwest = {version = "0.11.12", features = ["blocking"]}
 serde = "1.0.147"
-serde_derive = "1.0.147"
-tempfile = "3.3.0"
 tokio = {version = "1.21.2", features = ["rt-multi-thread"]}
-toml = "0.5.8"
 tracing = "0.1.37"
 
 [dev-dependencies]
