--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,11 @@ jobs:
           - os: macos-latest
             sudo: sudo
             protoc-target: osx-x86_64
+            cleanup: chown -R runner .
           - os: ubuntu-latest
             sudo: sudo env PATH="$PATH"
             protoc-target: linux-x86_64
+            cleanup: chown -R runner .
           - os: windows-latest
             protoc-target: win64
       fail-fast: false
@@ -40,3 +42,4 @@ jobs:
           cargo make build-all
           cargo make test
           ${{ matrix.sudo }} cargo make test-admin
+          ${{ matrix.cleanup }}
