--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,13 +9,20 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: macos-latest
-            sudo: sudo
             protoc-target: osx-x86_64
+            test: sudo cargo make test-admin
+          - os: macos-latest
+            protoc-target: osx-x86_64
+            test: cargo make test
           - os: ubuntu-latest
-            sudo: sudo env PATH="$PATH"
             protoc-target: linux-x86_64
+            test: sudo -E cargo make test-admin
+          - os: ubuntu-latest
+            protoc-target: linux-x86_64
+            test: cargo make test
           - os: windows-latest
             protoc-target: win64
+            test: cargo make test
       fail-fast: false
     name: Build and test
     runs-on: ${{ matrix.os }}
@@ -38,4 +45,4 @@ jobs:
           unzip protoc-3.19.4-${{ matrix.protoc-target }}.zip -d "${{ github.workspace }}/protoc"
           cargo install cargo-make
           cargo make build-all
-          cargo make test
+          ${{ matrix.test }}
